<resources>
    <string name="app_name">horrorKotlin</string>
    <string name="AD" translatable="false">ca-app-pub-8461307543970328/1041975543</string>
    <string name="닫기">닫기</string>
    <string name="아니요">아니요</string>
    <string name="전체">전체</string>
    <string name="안본글">안 본글</string>
    <string name="북마크">즐겨찾기</string>
    <string name="설정">설정</string>
    <string name="검색">검색</string>
    <string name="문의">문의하기</string>
    <string name="문의_업데이트">업데이트 문의</string>
    <string name="문의_오류">오류 및 버그 문의</string>
    <string name="설정_전체화면">전체 화면 유지하기</string>
    <string name="확인">확인</string>
    <string name="네">네</string>
    <string name="광고보기">광고 보기</string>
    <string name="광고_해석권">광고보고 해석권 5개 획득하기</string>
    <string name="해석권_설명">해석권은 해석을 보여주는 쿠폰입니다\\n\\t\\t처음 10개가 주어지고 그 후 광고를 \\t\\t\\\t통해서 얻을 수 있습니다.</string>
    <string name="리뷰">리뷰 달기</string>
    <string name="리뷰_타이틀">이야기가 재밌었다면\\n리뷰를 달아주세요!!</string>
    <string name="리뷰_하단">옆에서 몰래 보고있는 당신도...</string>
    <string name="title_activity_story_list">StoryListActivity</string>
</resources>