<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="170dp"
    android:orientation="vertical"
    android:background="@drawable/review">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:text="@string/광고_해석권"
        android:textColor="@color/textColor"
        android:fontFamily="@font/bm"
        android:textSize="20dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9A9A9A"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00ff0000"
            android:fontFamily="@font/jsarirang"
            android:gravity="center"
            android:text="@string/아니요"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#9A9A9A"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:fontFamily="@font/jsarirang"
            android:background="#00ff0000"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/광고보기"
            />

    </LinearLayout>
</LinearLayout>