<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="170dp"
    android:orientation="vertical"
    android:background="@drawable/review">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/리뷰_타이틀"
        android:textColor="#DFDFDF"
        android:fontFamily="@font/jsarirang"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/리뷰_하단"
        android:textColor="#989898"
        android:fontFamily="@font/jsarirang"
        android:textSize="12dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9A9A9A"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00ff0000"
            android:fontFamily="@font/jsarirang"
            android:gravity="center"
            android:text="@string/아니요"
            android:textColor="#DFDFDF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#9A9A9A"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#DFDFDF"
            android:fontFamily="@font/jsarirang"
            android:background="#00ff0000"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="리뷰 달기"
            />

    </LinearLayout>
</LinearLayout>